compiler/testData/diagnostics/tests/secondaryConstructors/delegationByWithoutPrimary.kt
trait A
class AImpl : A

class B : <!UNSUPPORTED!>A by AImpl()<!> {
    constructor() {}
}
